Changes to user lists

--- a/app/views/v7/l2/users/view/all-3.html
+++ b/app/views/v7/l2/users/view/all-3.html
@@ -82,6 +82,66 @@
                 <td class="govuk-table__cell">Capita</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
+
+                       <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary McAllister</a></th>
+                <td class="govuk-table__cell">Capita</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gerald Krasner</a></th>
+                <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gordon Strachan</a></th>
+                <td class="govuk-table__cell">Capita</td>
+                <td class="govuk-table__cell">Invite sent</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Harry Reynolds</a></th>
+                <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Imre Varadi</a></th>
+                <td class="govuk-table__cell">Remploy</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Janet Sheridan</a></th>
+                <td class="govuk-table__cell">Remploy</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jeremy Wade</a></th>
+                <td class="govuk-table__cell">G4S</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jonathon Giles</a></th>
+                <td class="govuk-table__cell">Serco</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jonathon Giles</a></th>
+                <td class="govuk-table__cell">Serco</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Lukic</a></th>
+                <td class="govuk-table__cell">Capita</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
         </tbody>
     </table>
 
