--- a/app/views/dev2/l3/email.html
+++ b/app/views/dev2/l3/email.html
@@ -128,11 +128,11 @@
                     <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
                         Email:<br>
                         {% if data['prototype-service'] == "HTDS" %}
-                            <a href="mailto:htds.support@dwp.gsi.gov.uk" class="govuk-link">htds.support@dwp.gsi.gov.uk</a>
+                            <a href="mailto:htds.support@dwp.gov.uk" class="govuk-link">htds.support@dwp.gov.uk</a>
                         {% elseif data['prototype-service'] == "PRaP" %}
-                            <a href="mailto:prap.support@dwp.gsi.gov.uk" class="govuk-link">prap.support@dwp.gsi.gov.uk</a>
+                            <a href="mailto:prap.support@dwp.gov.uk" class="govuk-link">prap.support@dwp.gov.uk</a>
                         {% elseif data['prototype-service'] == "ESF" %}
-                            <a href="mailto:prap.support@dwp.gsi.gov.uk" class="govuk-link">esf.support@dwp.gsi.gov.uk</a>
+                            <a href="mailto:prap.support@dwp.gov.uk" class="govuk-link">esf.support@dwp.gov.uk</a>
                         {% endif %}
                     </p>
 
