--- a/app/views/dev2/l4/signin.html
+++ b/app/views/dev2/l4/signin.html
@@ -7,11 +7,11 @@
 {% block header %}
     <header class="govuk-header" role="banner" data-module="govuk-header">
         <div class="govuk-header__container govuk-width-container">
-            <div class="govuk-header__logo">
+            <div class="govuk-header__logo" style="width:50%">
                 <a href="/" class="govuk-header__link govuk-header__link--homepage">
                     <span class="govuk-header__logotype">
                         <span class="govuk-header__logotype-text">
-                            {{serviceName}}
+                            DWP Authenticate: {{ data['prototype-service'] }}
                         </span>
                     </span>
                 </a>
@@ -74,11 +74,11 @@
                         If you have a problem that is not a forgotten password, email
 
                         {% if data['prototype-service'] == "HTDS" %}
-                            <a href="mailto:htds.support@dwp.gsi.gov.uk" class="govuk-link">htds.support@dwp.gsi.gov.uk</a>
+                            <a href="mailto:htds.support@dwp.gov.uk" class="govuk-link">htds.support@dwp.gov.uk</a>
                         {% elseif data['prototype-service'] == "PRaP" %}
-                            <a href="mailto:prap.support@dwp.gsi.gov.uk" class="govuk-link">prap.support@dwp.gsi.gov.uk</a>
+                            <a href="mailto:prap.support@dwp.gov.uk" class="govuk-link">prap.support@dwp.gov.uk</a>
                         {% elseif data['prototype-service'] == "ESF" %}
-                            <a href="mailto:prap.support@dwp.gsi.gov.uk" class="govuk-link">esf.support@dwp.gsi.gov.uk</a>
+                            <a href="mailto:prap.support@dwp.gov.uk" class="govuk-link">esf.support@dwp.gov.uk</a>
                         {% endif %}
                     </div>
                 </details>
