--- a/app/views/index.html
+++ b/app/views/index.html
@@ -557,6 +557,10 @@
                                     {
                                         value: "l3-dashboard",
                                         text: "View as a L3 organisation admin"
+                                    },
+                                    {
+                                        value: "l4-dashboard",
+                                        text: "View as a L4 standard user"
                                     }
                                 ]
                             }) }}
