--- a/app/views/dev2/l2/signin.html
+++ b/app/views/dev2/l2/signin.html
@@ -74,11 +74,11 @@
                         If you have a problem that is not a forgotten password, email
 
                         {% if data['prototype-service'] == "HTDS" %}
-                            <a href="mailto:htds.support@dwp.gsi.gov.uk" class="govuk-link">htds.support@dwp.gsi.gov.uk</a>
+                            <a href="mailto:htds.support@dwp.gov.uk" class="govuk-link">htds.support@dwp.gov.uk</a>
                         {% elseif data['prototype-service'] == "PRaP" %}
-                            <a href="mailto:prap.support@dwp.gsi.gov.uk" class="govuk-link">prap.support@dwp.gsi.gov.uk</a>
+                            <a href="mailto:prap.support@dwp.gov.uk" class="govuk-link">prap.support@dwp.gov.uk</a>
                         {% elseif data['prototype-service'] == "ESF" %}
-                            <a href="mailto:prap.support@dwp.gsi.gov.uk" class="govuk-link">esf.support@dwp.gsi.gov.uk</a>
+                            <a href="mailto:prap.support@dwp.gov.uk" class="govuk-link">esf.support@dwp.gov.uk</a>
                         {% endif %}
                     </div>
                 </details>
