--- a/app/views/dev2/l4/users/reset-password/confirmation.html
+++ b/app/views/dev2/l4/users/reset-password/confirmation.html
@@ -7,11 +7,11 @@
 {% block header %}
     <header class="govuk-header" role="banner" data-module="govuk-header">
         <div class="govuk-header__container govuk-width-container">
-            <div class="govuk-header__logo">
+            <div class="govuk-header__logo" style="width:50%">
                 <a href="/" class="govuk-header__link govuk-header__link--homepage">
                     <span class="govuk-header__logotype">
                         <span class="govuk-header__logotype-text">
-                            {{serviceName}}
+                            DWP Authenticate: {{ data['prototype-service'] }}
                         </span>
                     </span>
                 </a>
