--- a/app/views/v7/l4/signin-code.html
+++ b/app/views/v7/l4/signin-code.html
@@ -51,7 +51,7 @@
 
         {{ govukDetails({
             summaryText: "This isn't the right phone number",
-            text: "lorem ipsum dolor sit amet, consectetur adepiscing"
+            html: 'Email <a href="mailto:support@support.com">service support team</a>, if you need the code sent to a new number.'
         }) }}
     </form>
 {% endblock %}
