--- a/app/views/v7/l2/users/register/complete.html
+++ b/app/views/v7/l2/users/register/complete.html
@@ -66,7 +66,7 @@
 
                 <p>
                     Email:<br>
-                    <a href="#" class="govuk-link">prap.support@dwp.gsi.gov.uk</a>
+                    <a href="#" class="govuk-link">prap.support@dwp.gov.uk</a>
                 </p>
             {% elseif data['prototype-service'] == 'HTDS' %}
                 <p>HTDS Operational Support Team</p>
@@ -83,7 +83,7 @@
 
                 <p>
                     Email:<br>
-                    <a href="#" class="govuk-link">htds.support@dwp.gsi.gov.uk</a>
+                    <a href="#" class="govuk-link">htds.support@dwp.gov.uk</a>
                 </p>
             {% elseif data['prototype-service'] == 'ESF' %}
                 <p>ESF Operational Support Team</p>
@@ -100,7 +100,7 @@
 
                 <p>
                     Email:<br>
-                    <a href="#" class="govuk-link">esf.support@dwp.gsi.gov.uk</a>
+                    <a href="#" class="govuk-link">esf.support@dwp.gov.uk</a>
                 </p>
             {% endif %}
         </div>
