--- a/app/views/v7/l3/users/register/complete.html
+++ b/app/views/v7/l3/users/register/complete.html
@@ -61,7 +61,7 @@
 
                 <p>
                     Email:<br>
-                    <a href="#" class="govuk-link">prap.support@dwp.gsi.gov.uk</a>
+                    <a href="#" class="govuk-link">prap.support@dwp.gov.uk</a>
                 </p>
             {% elseif data['prototype-service'] == 'HTDS' %}
                 <p>HTDS Operational Support Team</p>
@@ -78,7 +78,7 @@
 
                 <p>
                     Email:<br>
-                    <a href="#" class="govuk-link">htds.support@dwp.gsi.gov.uk</a>
+                    <a href="#" class="govuk-link">htds.support@dwp.gov.uk</a>
                 </p>
             {% elseif data['prototype-service'] == 'ESF' %}
                 <p>ESF Operational Support Team</p>
@@ -95,7 +95,7 @@
 
                 <p>
                     Email:<br>
-                    <a href="#" class="govuk-link">esf.support@dwp.gsi.gov.uk</a>
+                    <a href="#" class="govuk-link">esf.support@dwp.gov.uk</a>
                 </p>
             {% endif %}
         </div>
