More authoriser requester files

--- a/app/views/v7/l2-authoriser/dashboard.html
+++ b/app/views/v7/l2-authoriser/dashboard.html
@@ -32,7 +32,7 @@
             
 
             <li>
-                <a href="orgs/view/all" class="govuk-link">View all requests</a>
+                <a href="requests/view/all" class="govuk-link">View all requests</a>
             </li>
         </ul>
     </div>
