Added new orgs to index page for UR

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -115,6 +115,20 @@
                                         }
                                     },
                                     {
+                                        value: "Ingeus",
+                                        text: "Ingeus",
+                                        attributes: {
+                                            "data-machine": "ingeus.com"
+                                        }
+                                    },
+                                    {
+                                        value: "Nottingham City Council",
+                                        text: "Nottingham City Council",
+                                        attributes: {
+                                            "data-machine": "nottinghamcity.gov.uk"
+                                        }
+                                    },
+                                    {
                                         value: "London Borough of Croydon Council",
                                         text: "London Borough of Croydon Council",
                                         attributes: {
