--- a/app/views/v7/l3/users/view/all.html
+++ b/app/views/v7/l3/users/view/all.html
@@ -138,7 +138,7 @@
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single-hs" class="govuk-link">Harpal Singh</a></th>
                 <td class="govuk-table__cell">harpal.singh@{{ data['prototype-organisation-machine'] }}</td>
-                <td class="govuk-table__cell ">Invite expired</td>
+                <td class="govuk-table__cell ">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
