Updating L3 for UR with new orgs

--- a/app/views/v7/l3/users/edit/restore.html
+++ b/app/views/v7/l3/users/edit/restore.html
@@ -13,7 +13,7 @@
         <div class="govuk-grid-column-two-thirds">
             {{ govukPanel({
                 titleText: "User access restored",
-                 text: "Jon Newsome"
+                 text: "Steve Hodge"
             }) }}
 
             <p><a href="../../dashboard" class="govuk-link">Back to dashboard</a></p>
