--- a/app/views/v7/l3/users/view/single-hs.html
+++ b/app/views/v7/l3/users/view/single-hs.html
@@ -66,7 +66,7 @@
                             text: "Status"
                         },
                         value: {
-                            text: "Active"
+                            text: "Access expired: more than 28 days since last sign in"
                         }
                     },
                     {
@@ -74,7 +74,7 @@
                             text: "Last logged in"
                         },
                         value: {
-                            html: '21 October 2019'
+                            html: '21 January 2020'
                         }
                     },
                     {
@@ -102,8 +102,8 @@
                     },
                     items: [
                         {
-                            value: "reinvite",
-                            text: "Resend invitation"
+                            value: "restore",
+                            text: "Restore access"
                         },
                         {
                             value: "delete",
