--- a/app/views/v7/l3/users/view/single-sh.html
+++ b/app/views/v7/l3/users/view/single-sh.html
@@ -42,7 +42,7 @@
                             text: "Name"
                         },
                         value: {
-                            text: "Jacob Burns"
+                            text: "Steve Hodge"
                         }
                     },
                     {
@@ -50,7 +50,7 @@
                             text: "Email address"
                         },
                         value: {
-                            html: "jacob.burns@" + data['prototype-organisation-machine']
+                            html: "steve.hodge@" + data['prototype-organisation-machine']
                         }
                     },
                     {
@@ -74,7 +74,7 @@
                             text: "Last logged in"
                         },
                         value: {
-                            html: '21 January 2020'
+                            html: '14 February 2020'
                         }
                     },
                     {
@@ -107,7 +107,7 @@
                         },
                         {
                             value: "delete",
-                            text: "Delete Jacob Burns"
+                            text: "Delete Steve Hodge"
                         }
                     ]
                 }) }}
