--- a/app/views/v7/l3/users/view/sorted/all-by-name-reverse.html
+++ b/app/views/v7/l3/users/view/sorted/all-by-name-reverse.html
@@ -47,7 +47,7 @@
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Steve Hodge</a></th>
                 <td class="govuk-table__cell">steve.hodge@{{ data['prototype-organisation-machine'] }}</td>
-                <td class="govuk-table__cell ">Active</td>
+                <td class="govuk-table__cell ">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -105,7 +105,7 @@
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single-hs" class="govuk-link">Harpal Singh</a></th>
                 <td class="govuk-table__cell">harpal.singh@{{ data['prototype-organisation-machine'] }}</td>
-                <td class="govuk-table__cell ">Invite expired</td>
+                <td class="govuk-table__cell ">Access expired</td>
             </tr>
             
             <tr class="govuk-table__row">
