--- a/app/views/v7/l3/users/view/sorted/filtered-access-expired.html
+++ b/app/views/v7/l3/users/view/sorted/filtered-access-expired.html
@@ -46,7 +46,6 @@
                     <option value="all-statuses">All statuses</option>
                     <option value="access-expired" selected>Access expired</option>
                     <option value="active">Active</option>
-                    <option value="invite-expired">Invite expired</option>
                     <option value="invite-sent">Invite sent</option>
                 </select>
 
@@ -66,7 +65,7 @@
 
 
 
-    <p class="govuk-body" style="margin-top:-25px">Showing <strong>3 Access expired</strong> users</p>
+    <p class="govuk-body" style="margin-top:-25px">Showing <strong>6 Access expired</strong> users</p>
 
     <table class="govuk-table">
         <thead class="govuk-table__head">
@@ -90,12 +89,31 @@
         
 
         <tbody class="govuk-table__body">
-          
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">David Batty</a></th>
                 <td class="govuk-table__cell">david.batty@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Access expired</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="../single-jb" class="govuk-link">Jacob Burns</a></th>
+                <td class="govuk-table__cell">jacob.burns@{{ data['prototype-organisation-machine'] }}</td>
+                <td class="govuk-table__cell ">Access expired</td>
+            </tr>
+          
+
+          <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="../single-sh" class="govuk-link">Steve Hodge</a></th>
+                <td class="govuk-table__cell">steve.hodge@{{ data['prototype-organisation-machine'] }}</td>
+                <td class="govuk-table__cell ">Access expired</td>
+            </tr>
+
+        
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="../single-hs" class="govuk-link">Harpal Singh</a></th>
+                <td class="govuk-table__cell">harpal.singh@{{ data['prototype-organisation-machine'] }}</td>
+                <td class="govuk-table__cell ">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
