--- a/app/views/v7/l3/users/search/search-results-none.html
+++ b/app/views/v7/l3/users/search/search-results-none.html
@@ -14,15 +14,21 @@
 
 {% block content %}
 
-{% if data['user-search'] | lower == 'jacob.burns@clarionhg.com' %}
+{% if data['user-search'] | lower == 'jacob.burns@ingeus.com' %}
 <script>
     window.location.href = 'search-results-success-jb'
 </script>
 {% endif %}
 
-{% if data['user-search'] | lower == 'harpal.singh@clarionhg.com' %}
+{% if data['user-search'] | lower == 'harpal.singh@ingeus.com' %}
 <script>
     window.location.href = 'search-results-success-hs'
+</script>
+{% endif %}
+
+{% if data['user-search'] | lower == 'steve.hodge@ingeus.com' %}
+<script>
+    window.location.href = 'search-results-success-sh'
 </script>
 {% endif %}
 
