--- a/app/views/v7/l3/users/search/search-results-success-sh.html
+++ b/app/views/v7/l3/users/search/search-results-success-sh.html
@@ -58,8 +58,8 @@
                     <tbody class="govuk-table__body">
                             <tr class="govuk-table__row">
                                 <th scope="row" class="govuk-table__header">
-                                    <a href="../view/single-hs" class="govuk-link">
-                                        Harpal Singh
+                                    <a href="../view/single-sh" class="govuk-link">
+                                        Steve Hodge
                                     </a>
                                 </th>
 
