--- a/app/views/v7/l3/users/view/sorted/all-by-status.html
+++ b/app/views/v7/l3/users/view/sorted/all-by-status.html
@@ -49,20 +49,40 @@
                 </tr>
             {% endif %}
 
-             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Batty</a></th>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">David Batty</a></th>
                 <td class="govuk-table__cell">david.batty@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary Speed</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single-jb" class="govuk-link">Jacob Burns</a></th>
+                <td class="govuk-table__cell">jacob.burns@{{ data['prototype-organisation-machine'] }}</td>
+                <td class="govuk-table__cell ">Access expired</td>
+            </tr>
+          
+
+          <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="../single-sh" class="govuk-link">Steve Hodge</a></th>
+                <td class="govuk-table__cell">steve.hodge@{{ data['prototype-organisation-machine'] }}</td>
+                <td class="govuk-table__cell ">Access expired</td>
+            </tr>
+
+        
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="../single-hs" class="govuk-link">Harpal Singh</a></th>
+                <td class="govuk-table__cell">harpal.singh@{{ data['prototype-organisation-machine'] }}</td>
+                <td class="govuk-table__cell ">Access expired</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Gary Speed</a></th>
                 <td class="govuk-table__cell">gary.speed@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
 
              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jon Newsome</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single-jn" class="govuk-link">Jon Newsome</a></th>
                 <td class="govuk-table__cell">jon.newsome@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
@@ -156,23 +176,7 @@
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mel Sterland</a></th>
-                <td class="govuk-table__cell">mel.sterland@{{ data['prototype-organisation-machine'] }}</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Rod Wallace</a></th>
-                <td class="govuk-table__cell">rod.wallace@{{ data['prototype-organisation-machine'] }}</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Steve Hodge</a></th>
-                <td class="govuk-table__cell">steve.hodge@{{ data['prototype-organisation-machine'] }}</td>
-                <td class="govuk-table__cell ">Active</td>
-            </tr>
+            
 
            
         </tbody>
