--- a/app/views/v7/l3/users/view/single-jn.html
+++ b/app/views/v7/l3/users/view/single-jn.html
@@ -88,7 +88,7 @@
                 ]
             }) }}
 
-            <form id="form" method="post" action="edit-branch">
+            <form id="form" method="post" action="../edit/delete-check-jn">
                 {{ govukRadios({
                     classes: "govuk-radios",
                     idPrefix: "user-task",
