--- a/app/views/v7/l2-authoriser/requests/view/all.html
+++ b/app/views/v7/l2-authoriser/requests/view/all.html
@@ -49,7 +49,7 @@
 
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
-                            <a href="#" class="govuk-link">
+                            <a href="single-new-user" class="govuk-link">
                                 New user
                             </a>
                         </th>
@@ -81,7 +81,7 @@
 
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
-                            <a href="#" class="govuk-link">
+                            <a href="single-new-user" class="govuk-link">
                                 New user
                             </a>
                         </th>
