--- a/app/views/v7/l2-requester/users/view/dwp.html
+++ b/app/views/v7/l2-requester/users/view/dwp.html
@@ -18,7 +18,7 @@
                     Users
                 </h1>
 
-                <form id="form" method="post" action="../add/details">
+                <form id="form" method="post" action="../add/admin-portal-user">
                     <input type="hidden" name="organisation-name-existing" id="organisation-name-existing" value="Capita">
                     <button type="submit" class="govuk-button listing-page">Add a user</button>
                 </form>
