--- a/app/views/v7/l2-requester/email.html
+++ b/app/views/v7/l2-requester/email.html
@@ -79,7 +79,7 @@
 
                 <td style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; max-width: 560px;">
                     <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-                        Dear {{ data['prototype-firstname'] }} {{ data['prototype-lastname'] }} REQUESTER
+                        Dear {{ data['prototype-firstname'] }} {{ data['prototype-lastname'] }} 
                     </p>
 
                     <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
