--- a/app/views/v7/l2-authoriser/dashboard.html
+++ b/app/views/v7/l2-authoriser/dashboard.html
@@ -14,7 +14,7 @@
 <div class="govuk-cards govuk-cards--2">
 
     <div class="govuk-cards--2__item govuk-card--dashboard">
-        <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Requests</h2>
+        <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Your tasks</h2>
 
         <p class="govuk-heading-xl govuk-!-margin-bottom-5">
             <span class="govuk-visually-hidden">There are currently</span>
@@ -25,14 +25,14 @@
                 6
             {% endif %}
 
-            <span class="govuk-visually-hidden">requests awaiting authorisation</span>
+            <span class="govuk-visually-hidden">tasks awaiting authorisation</span>
         </p>
 
         <ul class="govuk-list">
             
 
             <li>
-                <a href="requests/view/all" class="govuk-link">View all requests</a>
+                <a href="requests/view/all" class="govuk-link">View all your tasks</a>
             </li>
         </ul>
     </div>
