--- a/app/views/v7/l2-authoriser/requests/edit/reject-confirm.html
+++ b/app/views/v7/l2-authoriser/requests/edit/reject-confirm.html
@@ -17,7 +17,7 @@
                 titleText: "New user request rejected"
             }) }}
 
-            <p>A notification has been sent to the requester, David Smith.</p>
+            <p>Paul Smith has been notified that their request has been rejected.</p>
 
             <p>Reason: {{ data["rejection-reason"] }}</p>
 
