--- a/app/views/v7/l2-authoriser/requests/view/all.html
+++ b/app/views/v7/l2-authoriser/requests/view/all.html
@@ -16,8 +16,10 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
             <h1 class="govuk-heading-l listing-page">
-                Requests
+                Your tasks
             </h1>
+
+            <p class="govuk-body">Review these requests and approve or reject them.</p>
 
 
             <table class="govuk-table">
